@@ -1,5 +1,7 @@
   * Fix torch rendering for non-default texture packs, under some
     circumstances.
+  * Fix a potential Exception for people running mods like More
+    Block IDs
 
 Minecraft X-Ray 3.0.0 (2011.04.21)
 
